# ecommerce-multi-agent

./: README.md  docker-compose.yml  dockerfile  main.py  prometheus.yml  pyproject.toml  supervisord.conf
grafana/provisioning/dashboards/: dashboard.yml
grafana/provisioning/datasources/: prometheus.yml
orchestrator/: main.py  router.py
services/auth_service/: main.py  models.py  repository.py  router.py  schemas.py  service.py
services/orchestrator/: agent.py  agents.py  checkout_saga.py  main.py  router.py  saga.py  service.py  tools.py
services/order_service/: main.py  models.py  repository.py  router.py  schemas.py  service.py
services/payment_service/: main.py  models.py  repository.py  router.py  schemas.py  service.py
services/product_service/: main.py  models.py  repository.py  router.py  schemas.py  service.py
services/session_service/: main.py  models.py  repository.py  router.py  schemas.py  service.py
shared/config/: database.py
shared/observability/: __init__.py  metrics.py  setup.py
shared/security/: __init__.py  api_key.py  dependencies.py  jwt_handler.py  rate_limiter.py
tests/: dataset.json  run_evals.py
