[project]
name = "ecommerce-cluster"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.128.7",
    "httpx>=0.28.1",
    "langchain>=1.2.10",
    "openai>=2.20.0",
    "pydantic>=2.12.5",
    "sqlalchemy>=2.0.46",
    "uvicorn>=0.40.0",
    "langchain-core>=1.2.9",
    "langchain-openai>=1.1.7",
    "load-dotenv>=0.1.0",
    "python-dotenv>=1.2.1",
    "asyncpg>=0.31.0",
    "greenlet>=3.3.1",
]
