[project]
name = "ecommerce-cluster"
version = "0.1.0"
description = "Multi-agent e-commerce cluster"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "httpx>=0.27.0",
    "langchain>=0.2.14,<0.3.0",
    "langchain-openai>=0.1.22,<0.2.0",
    "langchain-core>=0.2.39,<0.3.0",
    "langgraph==0.2.20",
    "openai>=1.50.0",
    "pydantic>=2.9.0",
    "sqlalchemy>=2.0.0",
    "uvicorn>=0.30.0",
    "python-dotenv>=1.0.1",
    "asyncpg>=0.29.0",
    "greenlet>=3.0.0",
    "termcolor>=2.4.0",
    "python-jose[cryptography]>=3.5.0",
    "slowapi>=0.1.9",
    "passlib[bcrypt]>=1.7.4",
    "structlog>=25.5.0",
    "opentelemetry-api>=1.39.1",
    "opentelemetry-sdk>=1.39.1",
    "opentelemetry-instrumentation-fastapi>=0.60b1",
    "opentelemetry-instrumentation-httpx>=0.60b1",
    "opentelemetry-exporter-otlp>=1.39.1",
    "prometheus-fastapi-instrumentator>=7.1.0",
    "prometheus-client>=0.24.1",
]
